--- a/css/desai_lab_general.css
+++ b/css/desai_lab_general.css
@@ -3,6 +3,15 @@ html {
     /* always show scroll bar */
 }
 
+.emph {
+    font-weight: bold;
+}
+
+#takeaway {
+    font-size: 2rem;
+    color: #404040;
+}
+
 .full-width-img {
     width: 100%;
     height: 200px;
