center title and navigation, fix first selection of menu icon

--- a/css/desai_lab_general.css
+++ b/css/desai_lab_general.css
@@ -5,6 +5,7 @@ html {
 
 h1 {
     padding-top: 2rem;
+    text-align: center;
 }
 
 /* The Poppins font gets quite bold. Lighten it for in-text bolding. */
