--- a/css/desai_lab_general.css
+++ b/css/desai_lab_general.css
@@ -107,3 +107,20 @@ strong {
 .opps h4 {
     font-size: 2.0em;
 }
+
+
+@media screen and (max-width: 600px) {
+
+    .people_row p1 {
+        font-size: 1.3em;
+    }
+
+    .people_row p2 {
+        font-size: 1.2em;
+    }
+
+    .people_row p,
+    .people_row p3 {
+        font-size: 1em;
+    }
+}
